# musicbox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test-multi-platform.yml  cmake-multi-platform.yml
cmake/: link_to_pyside.cmake
config/: CMakeLists.txt  QtConfig.cmake.in
pyncpp/: CMakeLists.txt
source/: CMakeLists.txt
source/core/cpp/: CMakeLists.txt  musicbox.h
source/core/cpp/musicbox/: export.h
source/core/python/: CMakeLists.txt  setup.py
source/core/python/musicbox/: __init__.py  __main__.py  config.py  context_toolbar.py  data_set.py  file_load.py  filter.py  gui_group.py  plugins.py  project.py  qt.py  scene.py  scene_view.py  streams.py  view.py
source/core/python/musicbox/gui/: main_window.py
source/cpp_api/: CMakeLists.txt
source/cpp_api/musicbox/: conversion.h
source/cpp_api/musicbox/conversion/: qobject.cpp
source/cpp_api/musicbox/gui/: console.h
source/executable/: CMakeLists.txt  main.cpp
source/executable/cpp/: CMakeLists.txt  main.cpp
source/executable/python/: CMakeLists.txt  setup.py
source/executable/python/musicbox/: __main__.py
source/executable/python/musicbox/executable/: __init__.py  main_window.py
source/package/: CMakeLists.txt  setup.py
source/package/cpp/musicbox/conversion/: qobject.h
source/package/musicbox/: __init__.py  __main__.py  _test_command_line_options.py  config.py  test_command_line_options.py
source/package/musicbox/app/: __init__.py  _test_command_line.py  application.py  core_application.py
source/package/musicbox/core/: __init__.py  _dummy.py  _test_auto_reload.py  _test_completer.py  _test_console.py  completer.py  config.py  console.py  dev.py  messenger.py  settings.py  test_console.py  utils.py
source/package/musicbox/data/: __init__.py  image.py  mesh.py  test_image.py  test_mesh.py
source/package/musicbox/gui/: __init__.py  _gui_test_console_widget.py  console.py  console_widget.py  gtest_view.py  line_edit.py  proxy.py  view.py
source/package/musicbox/mesh/: __init__.py  primitive.py  test_creation.py
source/package/musicbox/tui/: __init__.py  image.py
source/package/pymedinria/: __init__.py  __main__.py
source/package/pymedinria/app/: __init__.py  _test_command_line.py  application.py
source/package/pymedinria/core/: _test_completer.py  _test_console.py  completer.py  config.py  console.py  dev.py  settings.py
source/package/pymedinria/gui/: _gui_test_console_widget.py  console_widget.py  line_edit.py
source/package/python/: setup.py
source/package/python/musicbox/: __init__.py  __main__.py  config.py
source/package/python/musicbox/api/: __init__.py
source/package/python/musicbox/app/: __init__.py  actions.py  application.py  config.py  docks.py  main_window.py  menu_bar.py  project.py  status_bar.py  tool_bar.py  welcome.py
source/package/python/musicbox/core/: __init__.py  messenger.py  plugins.py  settings.py  singleton.py
source/package/python/musicbox/data/: __init__.py  data_manager.py  encode.py  file_manager.py  image.py  project.py  scene.py  simple_itk.py
source/package/python/musicbox/data/tmp/: image.py  image_base.py  mesh.py  numpy.py  simple_itk.py  vtk.py
source/package/python/musicbox/gui/: __init__.py  console.py  data_set.py  data_view.py  editor.py  file_actions.py  gui_manager.py  license.py  scene.py  scene_actions.py  scene_graph.py
source/package/python/musicbox/plugins/console/: __init__.py  command_line.py
source/package/python/musicbox/plugins/qt/: __init__.py
source/package/python/musicbox/plugins/simple_itk/: __init__.py
source/package/python/musicbox/plugins/tk/: __init__.py
source/package/python/musicbox/plugins/vtk/: data_set.py  numpy_utils.py  qt.py  tk.py
source/package/python/musicbox/tmp/: project.py  qt.py  scene.py  scene_view.py  shiboken.py
source/package/python/musicbox/tui/: __init__.py  common.py  gui_proxy.py  image.py  mesh.py  project.py  scene.py  state.py
source/plugins/: CMakeLists.txt  setup.py
source/plugins/musicbox_plugins/console/: __init__.py
source/plugins/musicbox_plugins/numpy/: __init__.py
source/plugins/musicbox_plugins/qt/: __init__.py
source/plugins/musicbox_plugins/simple_itk/: __init__.py  image_filter.py
source/plugins/musicbox_plugins/vtk/: __init__.py  reader.py  slice_viewer.py
source/python_api/: CMakeLists.txt  setup.py
source/python_api/musicbox/: __init__.py  __main__.py  console.py  image.py  itk.py  main_window.py  viewer.py
source/python_api/musicbox/qt/: __init__.py  shiboken.py
source/standalone/: CMakeLists.txt  main.cpp
